--- a/latex/_meta.tex
+++ b/latex/_meta.tex
@@ -37,7 +37,7 @@
 % Illustration de la page de titre
 %  - Si pas de fichier préciser, la valeur est illustration
 %  - Si la commande n'est pas appellé, il n'y a pas d'illustration
-\illustration
+%\illustration
 
 % \illustrationheight[height]
 % Hauteur de l'illustration (défaut: 23em)
