--- a/latex/biblio.bib
+++ b/latex/biblio.bib
@@ -247,3 +247,39 @@
 	urldate = {2022-05-12},
 	file = {Helios Voting:/home/elerille/Zotero/storage/V7B7S6HH/vote.heliosvoting.org.html:text/html},
 }
+
+@online{harchandani_zero_2020,
+	title = {Zero knowledge proofs using Bulletproofs},
+	url = {https://medium.com/coinmonks/zero-knowledge-proofs-using-bulletproofs-4a8e2579fc82},
+	abstract = {Here i will show how to create various zero knowledge proofs using the Bulletproofs implementation from dalek-cryptography. The examples…},
+	titleaddon = {Coinmonks},
+	author = {Harchandani, Lovesh},
+	urldate = {2022-06-04},
+	date = {2020-08-26},
+	langid = {english},
+	file = {Snapshot:/home/elerille/Zotero/storage/ZTU5SIVF/zero-knowledge-proofs-using-bulletproofs-4a8e2579fc82.html:text/html},
+}
+
+@online{olivier_elections_2022,
+	title = {Elections : pour ou contre le vote électronique ?},
+	url = {https://www.touteleurope.eu/vie-politique-des-etats-membres/elections-pour-ou-contre-le-vote-electronique/},
+	shorttitle = {Elections},
+	abstract = {Les Français sont appelés à choisir le futur président de la République les 10 et 24 avril prochains. Dans certaines communes, ils pourront utiliser des "machines à voter". Dans plusieurs pays d'Europe aussi, les électeurs échappent parfois au traditionnel bulletin de papier glissé dans l'urne. Quels sont les avantages et les inconvénients de ce vote électronique ? Peut-il se développer en France ?},
+	titleaddon = {Touteleurope.eu},
+	author = {Olivier, Arthur},
+	urldate = {2022-06-20},
+	date = {2022-03-25},
+	langid = {french},
+	file = {Snapshot:/home/elerille/Zotero/storage/SG5CVEZ4/elections-pour-ou-contre-le-vote-electronique.html:text/html},
+}
+
+@online{jaberg_10_nodate,
+	title = {10 arguments pour et contre le vote électronique},
+	url = {https://www.swissinfo.ch/fre/politique/e-voting_10-arguments-pour-et-contre-le-vote-%C3%A9lectronique/43958726},
+	abstract = {Le vote électronique, chance ou risque pour la démocratie suisse? Les avis sont partagés au sein de la Confédération.},
+	titleaddon = {{SWI} swissinfo.ch},
+	author = {Jaberg, Traduit de l'allemand par Samuel},
+	urldate = {2022-06-20},
+	langid = {french},
+	file = {Snapshot:/home/elerille/Zotero/storage/NCCLBQ9P/43958726.html:text/html},
+}
