--- a/latex/content/implementation.tex
+++ b/latex/content/implementation.tex
@@ -3,6 +3,44 @@
 \begin{document}
 \part{Implémentation}
 
+\chapter{Cas d'utilisations}\label{chap:usecase}
+
+De manière générale l'utilisation du vote électronique par rapport à un vote traditionel ouvre la voie à 
+des attaques qui était jusqu'à présent impossible. 
+
+Lorsque l'action de voter ne se fait plus dans un isoloire dans un bureau de vote (ce qui est déjà le cas
+pour le vote par correspondance suisse) il y a une plus grande possibilité de coércition des votants.
+On ne pourra jamais exclure que des votants aient été contraint dans leur choix. 
+Le vote électronique ne résouds pas ce problème.
+
+\section{Cas d'utilisations}
+\subsection{Vote lors d'une assemblée}
+
+Lors d'un assemblée d'une association ou d'une entreprise/coopérative, les décisions sont souvant prise avec
+des votations sur des propositions.
+C'est votations peuvent être faites par e-voting dans la majorité des cas, cela permet de limité les erreurs 
+de comptage et d'avoir un résultat plus rapide s'il y a beaucoup de monde.
+Le vote électronique permet également d'avoir une plus grande confiance dans les résulats, car on ne fait pas 
+confience à un petit groupe chargé du décompte des voix (groupe qui ne contient pas toujours de personne de 
+chaque position possible).
+
+Le corruption des personnes chargées du décompte peux être facile, alors que si l'application utilisé pour
+l'e-voting est externe au groupe, il peut être beaucoup plus difficile de les corrompre.
+
+\begin{important}{Vote d'importance}
+	Même pour de petite structure, il peut avoir des risques importants à utilisé un système de vote électronique, 
+	notament s'il y a un ou des oppansants puissants (économiquement, politiquement ou informatiquement), et ce que
+	se soit par rapport à un vote spécifique ou de manière globale à la structure.
+\end{important}
+
+\todo{Autre cas d'utilisation?}
+%\section{Sondage rapide et anonyme au sein d'un groupe}
+%
+%Lorsqu'on fait des sondages, il peut être difficile de garantir l'anonymat des réponses. 
+%S'il y a besoin d'anonymat et de rapidité, l'utilisation d'une solution de e-voting peut permettre d'organiser 
+%de tel sondage. 
+
+
 
 
 \chapter{Lecture d'article}
