--- a/latex/content/resultat.tex
+++ b/latex/content/resultat.tex
@@ -5,10 +5,15 @@
 
 \chapter{Test des perf}
 
+
+\begin{nota}{Estimation}
+	Les valeurs estimées sont préfixée par \textasciitilde{}, plus d'information à la \aaref{sec:intro:notation:estimation}
+\end{nota}
+
 Les analyses ci-après on été effectué sur un ordinateur de bureau (i7-6700K, 8~cœurs, 8~Gio de RAM).
 Les programmes de test on été écrit et exécuté sur un seul thread, donc seul environ $\frac{1}{8}$ de 
 la capacité du processeur a été utilisé.
-Durant les tests la fréquence effective du prcesseur s'est stabilité à 4 GHz.
+Durant les tests la fréquence effective du processeur s'est stabilité à 4 GHz.
 
 Dans le tableau suivant, voici le nombre de votant pris en compte pour les simulations de ce chapitre.
 
