--- a/latex/content/diff-methode.tex
+++ b/latex/content/diff-methode.tex
@@ -22,82 +22,153 @@
 
 
 
-  \part{Analyse des différents types de scrutins}
+\part{Analyse des scrutins}
 
-\chapter{Cas d'utilisations}
+\chapter[Vote électronique: bonne ou mauvaise idée ?]{Vote électronique:\\Bonne ou mauvaise idée ?}
 
-De manière générale l'utilisation du vote électronique par rapport à un vote traditionel ouvre la voie à 
-des attaques qui était jusqu'à présent impossible. 
+\section{Argumentaire politique}
 
-Lorsque l'action de voter ne se fait plus dans un isoloire dans un bureau de vote (ce qui est déjà le cas
-pour le vote par correspondance suisse) il y a une plus grande possibilité de coércition des votants.
-On ne pourra jamais exclure que des votants aient été contraint dans leur choix. 
-Le vote électronique ne résouds pas ce problème.
+Dans cette section sont présenter un certain nombre argument pour ou contre le vote 
+électronique (utiliser lors de vote d'État). 
+Cette liste n'a pas pour vocation d'être exhaustif, mais de permettre d'avoir une idée
+des implications techniques des principaux arguments \cite{olivier_elections_2022,jaberg_10_nodate}.
+Les réponses qui sont faites à ces arguments sont technique et n'ont pas pour objectif de dire si 
+le vote électronique est bien ou pas bien pour la population.
 
-\section{Cas d'utilisations}
-\subsection{Vote lors d'une assemblée}
+\newpage
+\begin{multicols}{2}
+\subsection{Pour}\label{sec:diff-meth:args:pour}
+\begin{enumerate}
+	\item Facilité de vote en comparaison des contraintes du vote physique
+	\item Vote depuis l'étranger possible
+	\item Limitation les transmissions de maladie (tel que le COVID)
+	\item Augmentation de la participation
+	\item Il y a également des risques avec le vote physique
+	\item Résultat rapide après la clôture
+\end{enumerate}
+\newcolumn
+\subsection{Contre}\label{sec:diff-meth:args:contre}
+\begin{enumerate}
+	\item Trop cher à mettre en place et maintenir
+	\item Compréhension impossible par tout les citoyens et citoyennes
+	\item Recomptage impossible
+	\item Coercition du votant
+	\item Identification difficile du votant avec respect du secret du vote
+	\item Confidentialité difficile ou impossible
+	\item Vulnérabilité permettant la manipulabilité du résultat
+	\item Panne ou vulnérabilité rendant inopérant le système
+\end{enumerate}
+\end{multicols}
 
-Lors d'un assemblée d'une association ou d'une entreprise/coopérative, les décisions sont souvant prise avec
-des votations sur des propositions.
-C'est votations peuvent être faites par e-voting dans la majorité des cas, cela permet de limité les erreurs 
-de comptage et d'avoir un résultat plus rapide s'il y a beaucoup de monde.
-Le vote électronique permet également d'avoir une plus grande confiance dans les résulats, car on ne fait pas 
-confience à un petit groupe chargé du décompte des voix (groupe qui ne contient pas toujours de personne de 
-chaque position possible).
+\subsection{Réponses aux arguments}
 
-Le corruption des personnes chargées du décompte peux être facile, alors que si l'application utilisé pour
-l'e-voting est externe au groupe, il peut être beaucoup plus difficile de les corrompre.
+\begin{description}
+	\item[pour 1] Même si la facilité est relative au capacité et compétence de chacun. 
+		Un système facile d'utilisation qui authentifie le votant uniquement avec une 
+		paire nom d'utilisateur, mot de passe et le vérifie sur un serveur central sera 
+		peut-être simple à utiliser, mais est-ce que cette simplicité permet de garantir 
+		les besoins de sécurités ?
+	\item[pour 2 et 3] Il y a sûrement des contraintes de mise en application, mais ça simplifie 
+	 	le vote pour les personnes ne pouvant ou ne voulant pas se rendre dans un bureau de vote
+ 	\item[pour 4] Peut-être ou peut-être pas, je ne suis pas compétente sur ce point
+ 	\item[pour 5] Des risques existe aussi avec le vote physique, mais pour de grande fraude, il 
+ 		faut généralement la collaboration d'un nombre de personne proportionnel à la taille de la fraude.
+ 		Avec le vote électronique il n'y a plus les contraintes physiques limitant la taille des fraudes.
+ 	\item[pour 6] Oui, les résultats peuvent être disponible presque immédiatement.
+ 	\item[contre 1] C'est possible, mais il faut également mettre en perspective les bénéfices, et là ça 
+ 		deviens purement de la politique.
+ 	\item[contre 2] Effectivement la majorité des citoyens n'ont pas les compétences pour comprendre 
+ 		les protocoles de vote électronique et savoir s'ils sont acceptables.
+ 	\item[contre 3] Cela dépends de la solution retenue et du protocole.
+ 	\item[contre 4] Il y a effectivement une difficulté technique pour que le votant ne puisse pas
+ 		prouver ce qu'il a voter et donc limiter les contraintes qu'il pourrait subir.
+ 	\item[contre 5] Cela n'est pas forcement facile à mettre en place, mais le protocole mis en place 
+ 		pour ce rapport le permet (même si cela rajoute des contraintes)
+ 	\item[contre 6] La confidentialité du vote est difficile, notamment si le terminal du votant est compromis.
+ 	\item[contre 7 et 8] Tous système informatique doit être considérer comme potentiellement vulnérable à des attaques.
+ 		Des pannes (involontaire ou suite à une attaque) vont sûrement se produire un jour ou l'autre, une solution de backup
+ 		doit donc être prêt ou un report doit être possible. Ce qui serait très problématique c'est que rien ne soit fait 
+ 		et que l'ensemble des citoyens n'ai pas pu voter s'ils le désiraient ou qu'il y ai un report mais qu'une partie des 
+ 		résultats soit quand même publié (influence du second scrutin).
+\end{description}
 
-\begin{important}{Vote d'importance}
-  Même pour de petite structure, il peut avoir des risques importants à utilisé un système de vote électronique, 
-  notament s'il y a un ou des oppansants puissants (économiquement, politiquement ou informatiquement), et ce que
-  se soit par rapport à un vote spécifique ou de manière globale à la structure.
-\end{important}
+\section{Cas de mauvaise utilisation}
 
-\todo{Autre cas d'utilisation?}
-%\section{Sondage rapide et anonyme au sein d'un groupe}
-%
-%Lorsqu'on fait des sondages, il peut être difficile de garantir l'anonymat des réponses. 
-%S'il y a besoin d'anonymat et de rapidité, l'utilisation d'une solution de e-voting peut permettre d'organiser 
-%de tel sondage. 
+Au vu des points ci-dessus, il y a des cas où l'utilisation de l'e-voting est à proscrire. 
+Dans certain cas même le vote par correspondance peut être problématique, la France ne permet que 
+le vote au sein d'un bureau de vote, y-compris pour les français de l'étranger. La Suisse cependant 
+permet pour toutes les votations populaires le vote par correspondance.
 
-.
+\subsection{Votation ou élection politique}
 
-\section{Cas de NON-utilisation}
+Les élections politique détermine pour les années à venir par qui le pays sera dirigée. 
+L'importance de ces élections est grande et donc des petits groupes de personne peuvent 
+avoir un intérêt prépondérant dans l'un ou l'autre des résultats possible. 
+Le risque d'une fraude ou tentative de fraude est présent, cependant le vote électronique 
+rajoute une couche de fragilité car tout système informatique est faillible.
+Le vote électronique fragilise le scrutin.
 
-Les cas suivants ne devrait pas utilisé de vote électronique pour leurs votations. 
-Dans le cas où il l'utiliserait quand même, une analyse détaillée des risques doit être fait au préalable.
+En cas de fraude avérée ou suspectée, les perdants remettront certainement le scrutin en doute, 
+cependant contrairement au vote traditionnel, la vérification du résultat ne pourra se faire que 
+par des experts et peux prendre beaucoup de temps (s'il faut auditer les logiciels utilisés), alors que 
+pour le vote traditionnel toute personne de la population a les capacité de vérifier (au moins en partie)
+qu'il n'y a pas eu de fraude, en recomptant les bulletins et vérifiant que chaque personne étant inscrit comme ayant
+voté a effectivement voté.
 
-\subsection{Élection à l'échel d'un pays}\label{sec:impl:non-use:pays}
-Utiliser le vote électronique pour une élection ou une votation d'un pays n'est pas une bonne idée.
-Il y a toujours des risques dû à l'utilisation de logiciel informatique, et quand bien même le logiciel de 
-votation serais exempt de vulnérabilité il y aurait toujours des menaces grâve qui peserais sur la votation.
-\begin{itemize}
-  \item des attaques visants les ordinateurs des votants
-  \item la circulation de fausse application de vote
-  \item des attaques visants Internet ou le réseau utiliser pour voter
-\end{itemize}
+Si pour une fraude de grande envergure, avec le vote traditionnel il faut mettre en place un grande infrastructure, des
+personne dans les bureaux de vote, du matériel de vote ou du personnel dérobant les autorisations les lettres pour le vote.
+Ces infrastructures d'autant plus grande que la fraude est de grande envergure, rajoute à chaque fois des chances qu'elle 
+soit détectée et potentiellement empêchée. Lors d'un vote électronique, selon la vulnérabilité exploitée, une poignée
+de personne dans leur coin peuvent effectuer une fraude sur l'ensemble du pays.
+Un autre pays, une grande entreprise ou une personne riche ont parfaitement les moyens financiers de louer les services
+d'un groupe de pirate informatique pour effectuer ou tenter de manipuler les élections.
 
-La vie politique d'un pays ne doit pas pouvoir être contrôler par un petit groupe de personne, sans accord 
-explicite de toute la population.
+Les votations politiques (référendum ou initiative populaire) sont tout autant voir plus sujet à ces risque de fraude, 
+car leur résultat est appliquer dans la loi directement, alors que lors d'une élection, si l'élu fait des choses qui ne
+plaise pas à la population, il y a toujours la possibilité de manifester contre (ou dans certain pays, des outils politiques
+permettent à la population de montrer son désaccord).
+
+Pour résumé, la vote électronique augmente les risques en réduisant la résilience du système à la fraude. 
+Il n'est pas non-plus compris par la population général. Pour ces raisons, son utilisation est déconseillée.
 
 \subsection{Votation d'importance stratégique}
-Lorsqu'une votation a une certaine importance stratégique (pour l'entreprise, la collectivité ou l'organisation qui l'organise)
-et que l'on peux suspecter qu'il y a des personnes externe qui aient un intérêt pour une options ou une 
-autre,\footnote{Que cette personne existe ou non, le simple fait que l'on ne soit pas sûre est suffisant}
-cette votation ne devrait donc pas être faite via de l'e-voting. 
-Les vulnérabilités non-mitigeable sont les même qu'à la \aaref{sec:impl:non-use:pays}
 
+Lorsque le scrutin n'est pas pour la direction publique d'un pays ou d'une région, il y a des cas où le 
+recours à un vote électronique est risqué.
+Une organisation qui utilise régulièrement de l'e-voting peut pour certaine votations limité ou interdire
+son utilisation pour certaine décision d'importance ou où le risque de fraude est trop élevé.
+Les critères à utiliser dépende de l'organisation et de son environnement, en voici une liste de critère possible.
+\begin{itemize}
+	\item Lorsqu'un opposant fort s'est prononcer (publiquement ou en privé) contre ou pour une décision
+	\item Lorsque la décision peux faire gagner ou perdre des sommes d'argent importante à un autre acteur
+	\item Quand il y a une défiance envers une grande société ou un état
+	\item Lorsque l'organisation est particulièrement critiquée ou remis en cause
+	\item Si le report de la votation est trop compliquer ou impossible
+	\item \dots
+\end{itemize}
+
+Chaque organisation choisissant d'avoir recours au vote électronique, devrait mener une réflexion sur quel
+votation est trop risquée pour être effectuée en e-voting et définir des critères clairs, précis et d'avance
+sur les possibilités et les restrictions.
+
+\begin{nota}{Cas d'utilisation}
+	Seul des cas de non-utilisation ont été présenter dans ce chapitre, les cas d'utilisation (spécifique 
+	au choix effectuer dans ce travail de Bachelor) sont décrit dans le \aaref{chap:usecase}.
+\end{nota}
+
+  
   \chapter{Critère de comparaison}
   
+  \begin{important}{Choix des critères}
+  	Le choix des critères de comparaison des différentes méthodes de vote est choix 
+  	éminemment politique.
+  	C'est équivalent à répondre à la question quel candidat on souhaite élire en fonction
+  	des votes des électeurs, cependant on veillera à ne pas prendre en compte les positions 
+  	politiques des différents candidats.
+  	On veut savoir quel candidat devrait être élu, pas comment faire pour que notre candidat 
+  	favori l'emporte face aux autres candidats.
+  \end{important}
 
-  Le choix des critères de comparaison des différentes méthodes de vote est choix 
-  éminemment politique.
-  C'est équivalent à répondre à la question quel candidat on souhaite élire en fonction
-  des votes des électeurs, cependant on veillera à ne pas prendre en compte les positions 
-  politiques des différents candidats.
-  On veut savoir quel candidat devrait être élu, pas comment faire pour que notre candidat 
-  favori l'emporte face aux autres candidats.
 
   \section{Avis des perdants}
 
@@ -105,9 +176,39 @@ Les vulnérabilités non-mitigeable sont les même qu'à la \aaref{sec:impl:non-
   absolument contre, et ce même lorsqu'un autre candidat avec un score plus faible n'a aucun
   électeur contre.
   Un système de choix performant devrait prendre en compte les votes qui ne sont pas pour le candidat
-  élu, afin de trouver le candidat qui serait satisfaisant pour le plus de monde possible.
+  élu, afin de trouver le candidat qui est satisfaisant pour le plus de monde possible.
+  Le \aaref{fig:critere:perdant:example} montre une possibilité de vote où une partie importante de la population 
+  est très mécontente du résultat.
 
-  \todo{example}
+  \begin{nota}{Scrutin d'exemple}
+	Pour illustré les critères, des simulations de scrutin sont présenté, cependant cela ne 
+	veut pas dire que le type de scrutin sélectionner est le seul où ce genre de comportement 
+	est présent.
+  \end{nota}
+  \todo{Est-ce que seul le scrutin maj à 1 ou 2 tour est présenté ?}
+
+	\begin{table}[h]
+		\begin{center}
+			\caption{Exemple de cas où une grande partie de la population est mécontente}%
+			\label{fig:critere:perdant:example}
+			\adjustbox{valign=t}{%
+				\begin{subtable}[h]{0.45\textwidth}
+					\centering
+					\caption{Préférences des électeurs}%
+					\label{fig:critere:perdant:example:pref}
+					\inputMake{_dyn/scrutin/critere-A.votes.tex}
+				\end{subtable}
+			}
+			\adjustbox{valign=t}{%
+				\begin{subtable}[h]{0.45\textwidth}
+					\centering
+					\caption{Résultats du scrutin à 1 tour}%
+					\label{fig:critere:perdant:example:result}
+					\inputMake{_dyn/scrutin/critere-A.maj1.tex}
+				\end{subtable}
+			}
+		\end{center}
+	\end{table}
   
   \section{Indépendance à la présence de candidat perdant}
 
@@ -116,6 +217,9 @@ Les vulnérabilités non-mitigeable sont les même qu'à la \aaref{sec:impl:non-
   Cependant même si ce critère n'est pas totalement respecté pour des candidats avec de très bons 
   scores, le retrait d'un petit candidat (avec un score faible) ne doit pas faire changer 
   le vainqueur.
+  
+  Les tableaux \aref{fig:critere:indep:example} présentent un scrutin à 3 candidats et le même 
+  scrutin, mais avec le candidat C s'étant retiré. La candidate élue est passe donc de A à B.
 
   \subsection{Théorème d'impossibilité d'Arrow}
 
@@ -127,6 +231,45 @@ Les vulnérabilités non-mitigeable sont les même qu'à la \aaref{sec:impl:non-
   Dans les types de scrutins étudiés dans ce document, seuls la méthode Borda et le 
   jugement majoritaire échappent à ce théorème, car ils n'utilisent pas de classement des 
   options par les électeurs.
+  
+  \begin{table}[h]
+  	\begin{center}
+  		\caption{Exemple de retrait d'un petit candidat, changeant le résultat final}%
+  		\label{fig:critere:indep:example}
+  		\adjustbox{valign=t}{%
+  			\begin{subtable}[h]{0.45\textwidth}
+  				\centering
+  				\caption{Préférences des électeurs}%
+  				\label{fig:critere:perdant:indep:pref1}
+  				\inputMake{_dyn/scrutin/critere-B1.votes.tex}
+  			\end{subtable}
+  		}
+  		\adjustbox{valign=t}{%
+  			\begin{subtable}[h]{0.45\textwidth}
+  				\centering
+  				\caption{Résultats du scrutin à 1 tour}%
+  				\label{fig:critere:perdant:indep:result1}
+  				\inputMake{_dyn/scrutin/critere-B1.maj1.tex}
+  			\end{subtable}
+  		}\\[1em]
+	  	\adjustbox{valign=t}{%
+	  		\begin{subtable}[h]{0.45\textwidth}
+	  			\centering
+	  			\caption{Préférences des électeurs}%
+	  			\label{fig:critere:perdant:indep:pref2}
+	  			\inputMake{_dyn/scrutin/critere-B2.votes.tex}
+	  		\end{subtable}
+	  	}
+	  	\adjustbox{valign=t}{%
+	  		\begin{subtable}[h]{0.45\textwidth}
+	  			\centering
+	  			\caption{Résultats du scrutin à 1 tour}%
+	  			\label{fig:critere:perdant:indep:result2}
+	  			\inputMake{_dyn/scrutin/critere-B2.maj1.tex}
+	  		\end{subtable}
+	  	}
+  	\end{center}
+  \end{table}
 
   \section{Quasi-unanimité du vote}
 
@@ -135,7 +278,7 @@ Les vulnérabilités non-mitigeable sont les même qu'à la \aaref{sec:impl:non-
   Il y a différente méthode de vote qui ne respecte pas la quasi-unanimité du vote.
 
   \todo{Théorème: Borda ?}
-
+  
   \section{Manipulabilité et vote utile}
 
   \subsection{Vote utile}%
@@ -151,6 +294,50 @@ Les vulnérabilités non-mitigeable sont les même qu'à la \aaref{sec:impl:non-
   Il permet d'aider à la recherche d'un consensus en impliquant les citoyens dans la réflexion
   et donc sans se baser exclusivement sur des maths que toutes la population n'est pas forcément
   en mesure de comprendre.
+  
+  Les tableaux \aref{fig:critere:utile:example} montrent qu'un petit groupe de personne (3\% ou $\frac{1}{3}$ des 
+  électeurs de C) en choisissant de voter utile et classé B en premier, leur permet de voir élu un candidat qu'ils
+  avaient envie de voir au pouvoir.
+  Sans ce vote utile, ces même électeur aurait vu élu, un candidat qu'ils détestent.
+
+  \begin{table}[h]
+	\begin{center}
+		\caption{Exemple de vote utile}%
+		\label{fig:critere:utile:example}
+		\adjustbox{valign=t}{%
+			\begin{subtable}[h]{0.45\textwidth}
+				\centering
+				\caption{Préférences des électeurs}%
+				\label{fig:critere:utile:example:pref1}
+				\inputMake{_dyn/scrutin/critere-C1.votes.tex}
+			\end{subtable}
+		}
+		\adjustbox{valign=t}{%
+			\begin{subtable}[h]{0.45\textwidth}
+				\centering
+				\caption{Résultats du scrutin à 1 tour}%
+				\label{fig:critere:utile:example:result1}
+				\inputMake{_dyn/scrutin/critere-C1.maj1.tex}
+			\end{subtable}
+		}\\[1em]
+		\adjustbox{valign=t}{%
+			\begin{subtable}[h]{0.45\textwidth}
+				\centering
+				\caption{Préférences des électeurs}%
+				\label{fig:critere:utile:example:pref2}
+				\inputMake{_dyn/scrutin/critere-C2.votes.tex}
+			\end{subtable}
+		}
+		\adjustbox{valign=t}{%
+			\begin{subtable}[h]{0.45\textwidth}
+				\centering
+				\caption{Résultats du scrutin à 1 tour}%
+				\label{fig:critere:utile:example:result2}
+				\inputMake{_dyn/scrutin/critere-C2.maj1.tex}
+			\end{subtable}
+		}
+	\end{center}
+  \end{table}
 
   %\begin{nota}[élection présidentiel française 2022]{Exemple de vote utile}
   %  Par exemple lors de l'élection présidentiel française de 2022, certaines personnes de gauche
@@ -161,8 +348,6 @@ Les vulnérabilités non-mitigeable sont les même qu'à la \aaref{sec:impl:non-
   %  \todo{compléter example manipulation}
   %\end{nota}
 
-  \todo{Faire exemple avec graphique}
-
   \subsection{Manipulabilité du résultat et corruption}%
   \label{diff:comp:util:manip}%
   \label{diff:comp:util:corruption}
@@ -170,8 +355,49 @@ Les vulnérabilités non-mitigeable sont les même qu'à la \aaref{sec:impl:non-
   La manipulation du vote est le fait de ne pas voter pour ses candidats/options favoris, mais 
   pour un candidat que l'on ne veut pas voir au pouvoir dans l'objectif de faire en sorte que 
   notre candidat favori soit finalement élu.
+  
+  Les tableaux \aref{fig:critere:manip:example} montrent comment un petit nombre d'électeur 
+  (10\%) donnent leur voix à un candidat qu'ils ne veulent pas voir élu, pour réussir à faire 
+  élire leur candidat favori.
 
-  \todo{Faire exemple avec graphique}
+  \begin{table}[h]
+	\begin{center}
+		\caption{Exemple de manipulation du vote}%
+		\label{fig:critere:manip:example}
+		\adjustbox{valign=t}{%
+			\begin{subtable}[h]{0.45\textwidth}
+				\centering
+				\caption{Préférences des électeurs}%
+				\label{fig:critere:manip:example:pref1}
+				\inputMake{_dyn/scrutin/critere-D1.votes.tex}
+			\end{subtable}
+		}
+		\adjustbox{valign=t}{%
+			\begin{subtable}[h]{0.45\textwidth}
+				\centering
+				\caption{Résultats du scrutin à 2 tour}%
+				\label{fig:critere:manip:example:result1}
+				\inputMake{_dyn/scrutin/critere-D1.alternatif.tex}
+			\end{subtable}
+		}\\[1em]
+		\adjustbox{valign=t}{%
+			\begin{subtable}[h]{0.45\textwidth}
+				\centering
+				\caption{Préférences des électeurs}%
+				\label{fig:critere:manip:example:pref2}
+				\inputMake{_dyn/scrutin/critere-D2.votes.tex}
+			\end{subtable}
+		}
+		\adjustbox{valign=t}{%
+			\begin{subtable}[h]{0.45\textwidth}
+				\centering
+				\caption{Résultats du scrutin à 2 tour}%
+				\label{fig:critere:manip:example:result2}
+				\inputMake{_dyn/scrutin/critere-D2.alternatif.tex}
+			\end{subtable}
+		}
+	\end{center}
+  \end{table}
 
   La corruption du scrutin correspond à l'achat\footnote{Par achat on prend en compte 
   tout échange visant à limiter le choix libre du vote allant d'un petit avantage à la menace 
@@ -184,14 +410,51 @@ Les vulnérabilités non-mitigeable sont les même qu'à la \aaref{sec:impl:non-
   du vote, impossibilité de prouver pour qui on a voté, liberté de la presse …), mais 
   ces techniques ne peuvent pas garantir l'absence de corruption.
   
-  %\begin{nota}[élection présidentiel française 2022]{Exemple de tentative de manipulation du vote}
-  %  Lors du premier tours 
-  %  \todo{compléter example}
-  %\end{nota}
-
-  \todo{Faire exemple avec graphique}
-
+  Les tableaux \aref{fig:critere:corruption:example} montrent comment corrompre un petit nombre d'électeur 
+  (3\%) permet de faire élire alors que les électeurs corrompu ne voulait pas voir le candidat A élu.
+  
+  
+  \begin{table}[h]
+  	\begin{center}
+  		\caption{Exemple de corruption du vote}%
+  		\label{fig:critere:corruption:example}
+  		\adjustbox{valign=t}{%
+  			\begin{subtable}[h]{0.45\textwidth}
+  				\centering
+  				\caption{Préférences des électeurs}%
+  				\label{fig:critere:corruption:example:pref1}
+  				\inputMake{_dyn/scrutin/critere-E1.votes.tex}
+  			\end{subtable}
+  		}
+  		\adjustbox{valign=t}{%
+  			\begin{subtable}[h]{0.45\textwidth}
+  				\centering
+  				\caption{Résultats du scrutin à 2 tour}%
+  				\label{fig:critere:corruption:example:result1}
+  				\inputMake{_dyn/scrutin/critere-E1.alternatif.tex}
+  			\end{subtable}
+  		}\\[1em]
+  		\adjustbox{valign=t}{%
+  			\begin{subtable}[h]{0.45\textwidth}
+  				\centering
+  				\caption{Préférences des électeurs}%
+  				\label{fig:critere:corruption:example:pref2}
+  				\inputMake{_dyn/scrutin/critere-E2.votes.tex}
+  			\end{subtable}
+  		}
+  		\adjustbox{valign=t}{%
+  			\begin{subtable}[h]{0.45\textwidth}
+  				\centering
+  				\caption{Résultats du scrutin à 2 tour}%
+  				\label{fig:critere:corruption:example:result2}
+  				\inputMake{_dyn/scrutin/critere-E2.alternatif.tex}
+  			\end{subtable}
+  		}
+  	\end{center}
+  \end{table}
+  
   \section{Autre critère non pris en compte}
+  \todo{À déplacer ou supprime (les 3 subsections qui suivent)}
   \subsection{Votes blancs, nuls et abstentions}
 
   Les votes blancs et nuls devraient toujours être comptés, ne serait-ce que pour des raisons de
